components/PrimaryButton/button.module.scss
.button {
  overflow: hidden;
  cursor: pointer;
  background: #174888;
  border: none;
  padding: 20px 2.5rem;
  margin: 0;
  font-family: inherit;
  font-weight: bold;
  font-size: 14px;
  position: relative;
  display: inline-block;
  text-transform: uppercase;
  letter-spacing: 1.5px;
}

.button::before,
.button::after {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.button--primary {
  overflow: hidden;
  font-size: 14px;
  border-radius: 30px;
  color: #fff;
  background: #82bc1e;
  font-weight: bold;
}

.button--primary span {
  display: block;
  position: relative;
  // mix-blend-mode: difference;
  z-index: 10;
}

.button--primary:hover span {
  animation: MoveScaleUpInitial 0.3s forwards, MoveScaleUpEnd 0.3s forwards 0.3s;
}

@keyframes MoveScaleUpInitial {
  to {
    transform: translate3d(0, -105%, 0) scale3d(1, 2, 1);
    opacity: 0;
  }
}

@keyframes MoveScaleUpEnd {
  from {
    transform: translate3d(0, 100%, 0) scale3d(1, 2, 1);
    opacity: 0;
  }
  to {
    transform: translate3d(0, 0, 0);
    opacity: 1;
  }
}

.button--primary::before {
  content: "";
  background: #174888;
  width: 120%;
  height: 0;
  padding-bottom: 120%;
  top: -110%;
  left: -10%;
  border-radius: 50%;
  transform: translate3d(0, 68%, 0) scale3d(0, 0, 0);
}

.button--primary:hover::before {
  transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
  transition: transform 0.4s cubic-bezier(0.1, 0, 0.3, 1);
}

.button--primary::after {
  content: "";
  background: #174888;
  transform: translate3d(0, -100%, 0);
  transition: transform 0.4s cubic-bezier(0.1, 0, 0.3, 1);
}

.button--primary:hover::after {
  transform: translate3d(0, 0, 0);
  transition-duration: 0.05s;
  transition-delay: 0.4s;
  transition-timing-function: linear;
}

.button--white:hover span {
  transition: color 0.4s cubic-bezier(0.1, 0, 0.3, 1);
  color: #82bc1e;
}

.button--white::before {
  background: #fff;
}

.button--white::after {
  background: #fff;
}

